add back/front logic for generation of treasure chest objects upon page load

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,47 @@
     <title></title>
   </head>
   <body>
-    <div class="bear">
-      <h2>Bear</h2>
-      <button type="button" name="button">Feed</button>
-    </div>
+      <div class="giant-cards">
+        <div class="giant">
+          <h2>GIANT</h2>
+          <button type="button" name="button">Feed</button>
+          <button type="button" name="button">Rock</button>
+          <button type="button" name="button">Rock</button>
+        </div>
+      </div>
     <div class="start">
       <button type="button" name="button">Start</button>
     </div>
+
+    <div class="giant-menu">
+      <h2>The Giant is Sleeping</h2>
+      <button type="button" name="button">Use Sleeping Potion</button>
+      <button type="button" name="button">Escape With The Loot!</button>
+    </div>
+    <div class="giants-keep">
+      <div class="card-wrapper">
+        <div class="treasure-card">
+          <button type="button" name="button" value="0">open</button>
+        </div>
+        <div class="treasure-card">
+          <button type="button" name="button" value="1">open</button>
+        </div>
+        <div class="treasure-card">
+          <button type="button" name="button" value="2">open</button>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
