add player and turn-based logic

--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,11 @@
       <h2>The Giant is Sleeping</h2>
       <button type="button" name="button">Use Sleeping Potion</button>
       <button type="button" name="button">Escape With The Loot!</button>
+      <span class="giant-status"></span>
     </div>
     <div class="giants-keep">
       <div class="card-wrapper">
-        <div class="treasure-card">
-          <button type="button" name="button" value="0">open</button>
-        </div>
-        <div class="treasure-card">
-          <button type="button" name="button" value="1">open</button>
-        </div>
-        <div class="treasure-card">
-          <button type="button" name="button" value="2">open</button>
-        </div>
+
       </div>
 
     </div>
